src/test/deca/syntax/valid/created/sans_objet/instanceof/instanceof1.deca
// Règles attendues (occurences dans lignes du fichier résultat):
//
// Auteur: Eliott
//
// Historique:
//    cree le 22/01/2024
//
// Description:
//    test de programme syntaxiquement correct.

{
    int entier1 = 5;
    int entier2 = 10;
    if (entier instanceof entier) {
        println("youopi");
    }
}